# histv-universal

./: .gitignore  2.5.0-implementation-plan.md  CLI-README.md  README.md  Sonarr-Radarr-Integration.md  THEMES.md  THIRD-PARTY-LICENCES  build.yml  cargo-sources.json  com.histv.encoder.ci.yml  com.histv.encoder.desktop  com.histv.encoder.metainfo.xml  com.histv.encoder.yml  dovi-implementation-plan.md  external-code-review.md  gitignore  patchnotes.md  releasenotes.md  rust-toolchain.toml
.github/workflows/: build-cli-gui-linux.yml  build-cli-gui-macos-arm64.yml  build-cli-gui-macos-x64.yml  build-cli-gui-windows.yml  build-cli-gui.yml  build-flatpak.yml  build-linux.yml  build-macos-arm64.yml  build-macos-x64.yml  build-platform.yml  build-windows.yml  build.yml  ci.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: batch_control.rs  cli.rs  cli_main.rs  cli_sink.rs  config.rs  disk_monitor.rs  dovi_pipeline.rs  dovi_tools.rs  encoder.rs  events.rs  ffmpeg.rs  hdr10plus_pipeline.rs  hevc_utils.rs  lib.rs  main.rs  mkv_tags.rs  probe.rs  queue.rs  remote.rs  staging.rs  tauri_batch_control.rs  tauri_sink.rs  themes.rs  webp_decode.rs
src-tauri/src.old/: cli.rs  cli_main.rs  cli_sink.rs  config.rs  disk_monitor.rs  encoder.rs  events.rs  ffmpeg.rs  lib.rs  remote.rs  staging.rs  tauri_batch_control.rs  tauri_sink.rs
src-tauri/themes/: default-dark.json  default-light.json  jessica-dark.json  monokai.json  nord.json  solarised-dark.json  vempire.json
src/css/: app.css
src/js/: app.js
tools/: generate-cargo-sources.py
