[package]
name = "histv"
version = "2.0.0"
description = "Honey, I Shrunk The Vids - batch video encoder"
authors = ["claude.ai", "obelisk-complex"]
edition = "2021"

[lib]
name = "histv_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "histv-cli"
path = "src/cli_main.rs"
required-features = ["cli"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"], optional = true }
chrono = "0.4"
regex = "1"
reqwest = { version = "0.13", features = ["stream"], optional = true }
futures-util = { version = "0.3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }
ctrlc = { version = "3", optional = true }

[features]
default = ["custom-protocol", "downloader"]
custom-protocol = [
    "tauri/custom-protocol",
    "dep:tauri",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-shell",
    "dep:uuid",
]
downloader = ["dep:reqwest", "dep:futures-util"]
cli = ["dep:clap", "dep:indicatif", "dep:ctrlc"]
